changed the background style abit to improve contrast and fixed and issue with icon changing size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
 body {
     font-family: "Kode Mono", 'Chakra Petch', sans-serif;
     text-align: center;
-    background-image: linear-gradient(135deg, #f40234, #f0882f, #ffe600, #63a000, #0059a1);
+    background-color: #000000;
+    background-image: linear-gradient(135deg, #f40234cc, #f0882fcc, #ffe600cc, #63a000cc, #0059a1cc);
     margin: 0;
     height: 100vh;
     background-size: cover;
@@ -52,6 +53,7 @@ body {
     gap: 10px;
     border-radius: 10px;
     margin-bottom: 25px;
+    box-shadow: 4px 4px 2px #3d3d3d;
 }
 
 /** rules buttons **/
@@ -68,7 +70,7 @@ body {
     background-image: linear-gradient(135deg, #f4023499, #f0882f99, #ffe60099, #63a00099, #0059a199);
     color: #fff;
     background-color: #000000;
-    box-shadow:2px 2px 4px #000000;
+    box-shadow: 2px 2px 4px #000000;
 }
 
 /**  Playable Button Styles **/
@@ -87,7 +89,6 @@ body {
 
 .pbutton:hover {
     cursor: pointer;
-    font-size: 4.5rem;
     text-shadow: 0 0 4px currentColor;
 }
 
@@ -185,6 +186,12 @@ body {
     color: #f0882f;
 }
 
+#displayPlayerChoice,
+#displayRandomChoice,
+#result {
+    font-weight: bold;
+}
+
 /** media query **/
 
 /** screen style for screens larger than a tablet **/
@@ -207,6 +214,11 @@ body {
         width: 120px;
         height: 120px;
         font-size: 3rem;
+    }
+
+    .pbutton:hover {
+        text-shadow: 0 0 4px currentColor;
+        font-size: 4.5rem;
     }
 
     /** rock **/
@@ -297,7 +309,6 @@ body {
     #displayRandomChoice,
     #result {
         margin-top: 10px, 0;
-        font-weight: bold;
     }
 
     #scorebox {
